added timed roslaunch and inertialsense

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "src/kbhackathon"]
 	path = src/kbhackathon
 	url = git@github.com:drinkdhmo/kbhackathon.git
+[submodule "src/inertial_sense_ros"]
+	path = src/inertial_sense_ros
+	url = git@github.com:inertialsense/inertial_sense_ros.git
+[submodule "src/timed_roslaunch"]
+	path = src/timed_roslaunch
+	url = https://github.com/MoriKen254/timed_roslaunch.git
