building the path_manager

--- a/src/kb_autopilot/CMakeLists.txt
+++ b/src/kb_autopilot/CMakeLists.txt
@@ -161,6 +161,12 @@ add_executable(path_follower
 add_dependencies(path_follower ${catkin_EXPORTED_TARGETS} ${PROJECT_NAME}_gencfg)
 target_link_libraries(path_follower ${catkin_LIBRARIES})
 
+add_executable(path_manager
+            src/path_manager_base.cpp
+            src/path_manager_example.cpp)
+add_dependencies(path_manager ${catkin_EXPORTED_TARGETS})
+target_link_libraries(path_manager ${catkin_LIBRARIES})
+
 #############
 ## Install ##
 #############
