--- a/src/kb_autopilot/param/ekf.yaml
+++ b/src/kb_autopilot/param/ekf.yaml
@@ -3,3 +3,33 @@
 car_length: 0.179 # meters
 rmin_left: 0.713 # meters
 rmin_right: 0.770 # meters
+x0: [10, # north
+     10, # east
+     0, # heading
+     0, # velocity
+     0, # velocity bias
+     0.179, # wheel separation
+     0.25, # steering signal scaling
+     0] # steering signal bias
+P0: [0.1,0,0,0,0,0,0,0,0 # north
+     0.1,0,0,0,0,0,0,0,0 # east
+     0.1,0,0,0,0,0,0,0,0 # heading
+     0.01,0,0,0,0,0,0,0,0 # velocity
+     0.05,0,0,0,0,0,0,0,0 # velocity bias
+     0.05,0,0,0,0,0,0,0,0 # wheel separation
+     0.1,0,0,0,0,0,0,0,0 # steering signal scaling
+     0.1] # steering signal bias
+Qx: [0.001,0,0,0,0,0,0,0,0 # north
+     0.001,0,0,0,0,0,0,0,0 # east
+     0.001,0,0,0,0,0,0,0,0 # heading
+     0.001,0,0,0,0,0,0,0,0 # velocity
+     0.005,0,0,0,0,0,0,0,0 # velocity bias
+     0.005,0,0,0,0,0,0,0,0 # wheel separation
+     0.001,0,0,0,0,0,0,0,0 # steering signal scaling
+     0.001] # steering signal bias
+Qu: [0.001,0,0 # steering signal noise
+     0.001] # velocity noise
+R_pose: [0.01,0,0,0 # north
+         0.01,0,0,0 # east
+         0.01] # heading
+R_v: 0.01 # velocity
