--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "src/timed_roslaunch"]
 	path = src/timed_roslaunch
 	url = https://github.com/MoriKen254/timed_roslaunch.git
+[submodule "src/common_ros"]
+	path = src/common_ros
+	url = git@magiccvs.byu.edu:Jerel/common_ros.git
