--- a/src/kb_autopilot/param/ekf.yaml
+++ b/src/kb_autopilot/param/ekf.yaml
@@ -3,38 +3,25 @@
 x0: [-5, # north
      -9, # east
      1.6, # heading
-     0, # velocity
-     0, # velocity bias
-     0.179, # wheel separation
-     0.00016, # steering signal scaling
-     0.2] # steering signal bias
-P0: [0.1,0,0,0,0,0,0,0,0, # north
-     0.1,0,0,0,0,0,0,0,0, # east
-     0.1,0,0,0,0,0,0,0,0, # heading
-     0.01,0,0,0,0,0,0,0,0, # velocity
-     0.05,0,0,0,0,0,0,0,0, # velocity bias
-     0.05,0,0,0,0,0,0,0,0, # wheel separation
-     0.01,0,0,0,0,0,0,0,0, # steering signal scaling
-     0.1] # steering signal bias
-Qx: [0.0001,0,0,0,0,0,0,0,0, # north
-     0.0001,0,0,0,0,0,0,0,0, # east
-     0.0001,0,0,0,0,0,0,0,0, # heading
-     0.0001,0,0,0,0,0,0,0,0, # velocity
-     0.0005,0,0,0,0,0,0,0,0, # velocity bias
-     0.0005,0,0,0,0,0,0,0,0, # wheel separation
-     0.000001,0,0,0,0,0,0,0,0, # steering signal scaling
-     0.000001] # steering signal bias
-Qu: [0.001,0,0, # steering signal noise
-     0.001] # velocity noise
+     0, # gyro bias
+     0] # velocity bias
+P0: [0.5,0,0,0,0,0, # north
+     0.5,0,0,0,0,0, # east
+     0.1,0,0,0,0,0, # heading
+     0.01,0,0,0,0,0, # gyro bias
+     0.01] # velocity bias
+Qx: [0.01,0,0,0,0,0, # north
+     0.01,0,0,0,0,0, # east
+     0.001,0,0,0,0,0, # heading
+     0.001,0,0,0,0,0, # gyro bias
+     0.001] # velocity bias
+Qu: [0.001,0,0, # gyro noise
+     0.0001] # velocity noise
 R_pose: [0.01,0,0,0, # north
          0.01,0,0,0, # east
          0.01] # heading
-R_v: 0.1 # velocity
 lambda: [1, # north
          1, # east
          1, # heading
-         1, # velocity
-         0, # velocity bias
-         0, # wheel separation
-         0, # steering signal scaling
-         0] # steering signal bias
+         0, # gyro bias
+         0] # velocity bias
