msg file added to CMake and vo python scripts added

--- a/src/kb_autopilot/CMakeLists.txt
+++ b/src/kb_autopilot/CMakeLists.txt
@@ -58,6 +58,8 @@ add_message_files(
   Controller_Commands.msg
   Current_Path.msg
   Waypoint.msg
+  Vo.msg
+  Encoder.msg
 )
 
 ## Generate services in the 'srv' folder
